# workflow-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  commitlint.config.cjs
dummy_python_scripts/: hello.py  pyproject.toml  simple_yaml.yml
src/: main.rs
tests/: error.py
