[tool.poetry]
name = "dummy-python-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dummy_python_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
